Archive2/12/3f8dcd91cf0b1d/output
In file included from main.cpp:1:
In file included from /usr/include/c++/v1/iostream:38:
In file included from /usr/include/c++/v1/ios:216:
In file included from /usr/include/c++/v1/__locale:15:
In file included from /usr/include/c++/v1/string:434:
In file included from /usr/include/c++/v1/algorithm:627:
In file included from /usr/include/c++/v1/memory:606:
/usr/include/c++/v1/atomic:561:13: error: _Atomic cannot be applied to type 'std::__1::unique_ptr<PseudoType, std::__1::default_delete<PseudoType> >' which is not trivially copyable
    mutable _Atomic(_Tp) __a_;
            ^
/usr/include/c++/v1/atomic:730:14: note: in instantiation of template class 'std::__1::__atomic_base<std::__1::unique_ptr<PseudoType, std::__1::default_delete<PseudoType> >, false>' requested here
    : public __atomic_base<_Tp>
             ^
main.cpp:60:43: note: in instantiation of template class 'std::__1::atomic<std::__1::unique_ptr<PseudoType, std::__1::default_delete<PseudoType> > >' requested here
        std::atomic<std::unique_ptr<PseudoType>> a;
                                                 ^
1 error generated.
